--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.21.2",
-    "graphql": "^16.10.0",
-    "graphql-http": "^1.22.3",
+    "express": "^4.21.1",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "superagent": "^8.1.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "sequelize-cli": "^6.6.2"
   }
 }
