--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
+    "graphql-compose": "^9.0.11",
     "graphql-http": "^1.22.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
